--- a/pokemon.ipynb
+++ b/pokemon.ipynb
@@ -508,7 +508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Transform Pokemon DataFrame"
+    "### Transform Moves DataFrame"
    ]
   },
   {
