--- a/pokemon.ipynb
+++ b/pokemon.ipynb
@@ -330,7 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# List conversion function. Let me know if there are any issues\n",
+    "# List conversion function.\n",
     "def convert(s):\n",
     "    lst = []\n",
     "    temp = str(s).split(\", \")\n",
@@ -735,7 +735,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "connection_string = \"postgres:Gabriel(00)@localhost:5432/Pokemon\"\n",
+    "connection_string = \"postgres:[password]@localhost:5432/Pokemon\"\n",
     "engine = create_engine(f'postgresql://{connection_string}')"
    ]
   },
